--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -1,9 +1,15 @@
 ---
-- hosts: all
+- hosta: all
   become: yes
   tasks:
-  - name: i want to install webserver
-    apt: 
+  - name: i want to install apache2
+    apt:
       name: apache2
       state: present
-      
+    when: ansible_os_family=="Debian"
+  - name: i want to restart apache2
+    service: 
+      name: apache2
+      state: restarted
+    when: ansible_os_family=="Debian"
+    
