--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -12,4 +12,14 @@
       name: apache2
       state: restarted
     when: ansible_os_family=="Debian"
+  - name: i want to install webserver on redhatnode
+    yum:
+      name: httpd
+      state: present
+    when: ansible_os_family=="redhat"
+  - name: i want to start webserver
+    service:
+       name: httpd
+       state: restarted
+    when: ansible_os_family=="redhat" 
     
